--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.0",
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "debug": "^4.3.3",
     "dotenv": "^16.0.0",
