--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^5.0.2",
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0"
   },
